fixed glow behind logo

--- a/src/front/styles/navbar.css
+++ b/src/front/styles/navbar.css
@@ -22,14 +22,13 @@
 .logo {
   width: 150px;
   margin-top: 80px;
+  filter: drop-shadow(0 0 20px rgb(251, 255, 148));
 }
-.glow {
-  position: absolute;
-  transform: translate(20px, 20px);
-  width: 65px;
-  height: 65px;
-  z-index: -1;
-  box-shadow: 0 0 100px rgb(251, 0, 255);
+.logo:hover {
+  width: 150px;
+  margin-top: 80px;
+  filter: drop-shadow(0 0 30px rgb(255, 255, 255));
+  filter: brightness(90%);
 }
 
 .login {
